--- a/data/settings.json
+++ b/data/settings.json
@@ -1,7 +1,7 @@
 {
   "name": "USF Luxury Cars",
   "tagline": "Location de voitures à Tanger",
-  "description": "USF Luxury Cars est une agence...",
+  "description": "USF Luxury Cars est une agence de location de voitures basée à Tanger, offrant des véhicules fiables, propres et bien entretenus aux touristes et aux locaux.",
   "whatsapp": "212617462173",
   "whatsappMessage": "Bonjour USF Luxury Cars ! Je souhaite réserver une voiture.",
   "email": "usf.luxuys@gmail.com",
@@ -9,5 +9,6 @@
   "hours": "Lun–Dim : 08h00 – 20h00",
   "instagram": "usf.luxuys",
   "facebook": "USF Luxury Cars",
-  "updatedAt": "2026-02-28T21:25:48.966Z"
+  "updatedAt": "2026-02-27T00:00:00.000Z"
+
 }
